--- a/src/main/Build.csproj
+++ b/src/main/Build.csproj
@@ -11,7 +11,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
-    <StartupObject>main.Chat.Servidor</StartupObject>
+    <StartupObject>main.Servidor.Servidor</StartupObject>
   </PropertyGroup>
 
 
