--- a/src/Servidor/Servidor.csproj
+++ b/src/Servidor/Servidor.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
+    <StartupObject>Servidor.Servidor</StartupObject>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
