--- a/src/Servidor/Servidor.csproj
+++ b/src/Servidor/Servidor.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <ProjectReference Include="..\Cliente\Cliente.csproj" />
   </ItemGroup>
 
 </Project>
