--- a/src/Cliente/Cliente.csproj
+++ b/src/Cliente/Cliente.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <StartupObject>Cliente.Cliente</StartupObject>
+    <StartupObject>Chat.Cliente</StartupObject>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
